# rpa-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci_cd.yml
docs/: 需求规格说明书模板.md
reusable_modules/: utils.py
